[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Fonts/GreatVibes-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/GameOverScreen/GameOverScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/MusicAndSounds/BGM/DeathScreenSong.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 39
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRectFront:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRectFront:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="GameOverScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRectBack" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="YouDied" type="Label" parent="."]
anchor_top = 0.101
anchor_right = 1.0
anchor_bottom = 0.101
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "Game Over Text Here"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.5
margin_top = -27.0
margin_right = 46.5
margin_bottom = 27.0

[node name="Restart" type="Button" parent="VBoxContainer"]
margin_right = 93.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
text = "Restart"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 93.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 5 )
text = "Main Menu"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
autoplay = true
bus = "Music"

[node name="ColorRectFront" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade_in = SubResource( 3 )

[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
